fixed header alignment, padding from navbar and login form alignment

--- a/public/css/round-about.css
+++ b/public/css/round-about.css
@@ -13,6 +13,7 @@ body {
   body {
     padding-top: 56px;
   }
+
 }
 
 header {
@@ -20,70 +21,3 @@ header {
     font-family: sans-serif;
 }
 
-.container-items {
-    margin-top: 30px;
-    width: 75%;
-    padding: 30px;
-    background: #f7f4f4;
-    opacity: 0.97;
-    border-radius: 25px;
-    margin-left: 12.5%;
-}
-
-h1 {
-    margin: 0;
-    display: inline-block;
-}
-
-h2 {
-    position: relative;
-}
-
-form-inline mr-auto {
-    margin-bottom: 10px;
-    width: 100px;
-}
-
-.search {
-    display: inline-block;
-    text-align: center;
-}
-
-.category {
-    display: inline-block;
-    text-align: center;
-
-
-
-}
-
-#submit_button {
-    display: inline-block;
-    text-align: center;
-    position: relative;
-
-
-}
-
-#Header-Requirement {
-    margin: 0px;
-    display: inline-block;
-    text-align: center;
-    position: relative;
-    overflow: auto;
-}
-
-#logo {
-    display: inline-block;
-    height: 45px;
-    max-width: 180px;
-    margin-left: 10px;
-    margin-right: 30px;
-}
-
-#items-pic {
-    height: 100px;
-    width: auto;
-    position: center;
-    max-width: 500px;
-}
